--- a/analyze.html
+++ b/analyze.html
@@ -153,7 +153,7 @@ The "Analyze" step involves assessing outcomes by modeling how change in ecosyst
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
 <li>Produce early outputs such as maps or summary tables to characterize the current distribution of ecosystem services</li>
-<li>Through an iterative process (<b><a href="iterate.html">Iterate</a></b> step), assess ES outcomes under plausible alternative future scenarios</li>
+<li>Through a stakeholder-driven process, assess ES outcomes under plausible alternative future scenarios</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
@@ -176,32 +176,35 @@ Below we list some freely-available MSP analysis toolkits. Click on the tool's n
 <li><a href="http://www.nceas.ucsb.edu/globalmarine" target="_blank"><b>Cumulative Impacts</b></a>
 <br>&#8226; <a href="https://www.nceas.ucsb.edu/globalmarine/ca_current" target="_blank">California Current</a> - Researchers applied methods developed to map cumulative impacts globally to the California Current using more comprehensive and higher-quality data for 25 human activities and 19 marine ecosystems.
 </ul>
-<li><a href="http://www.naturalcapitalproject.org/InVEST.html" target="_blank"><b>InVEST</b></a>
+<li><a href="marine_invest.html"><b>Marine InVEST</b></a>
 <br>&#8226; Select InVEST MSP use-cases are described at the <a href="#use-cases">bottom of this page</a>.
-<li><a href="http://www.marinemap.org" target="_blank"><b>MarineMap</b></a>
-<br>&#8226; <a href="http://southcoast.marinemap.org/marinemap/" target="_blank">California South Coast</a> - MarineMap is an online mapping tool developed to assist in the design of marine protected areas (MPAs) in the Marine Life Protection Act Initiative process.  The MarineMap project has recently been retired and developers are now working on SeaSketch.
 <li><a href="http://www.afordablefutures.com/services/mimes" target="_blank"><b>MIMES</b></a>
 <br>&#8226; <a href="http://www.eartheconomics.org/FileLibrary/file/Reports/Louisiana/Earth_Economics_Report_on_the_Mississippi_River_Delta_compressed.pdf" target="_blank">Mississippi Delta</a> - Wetlands, Hurricanes and the Economy: The Value of Restoring the Mississippi River Delta
+<li><a href="http://www.wri.org/our-work/project/coastal-capital-economic-valuation-coastal-ecosystems-caribbean/coastal-capital#project-tabs" target="_blank"><b>WRI’s Valuation Methods and Tools</b></a>
+<br>&#8226; <a href="http://www.wri.org/our-work/project/coastal-capital-economic-valuation-coastal-ecosystems-caribbean" target="_blank">Caribbean</a> - WRI’s valuation methods and tools help policymakers, civil society or other interested parties to assess the value to their economies of goods and services provided by coral reefs and to aid in setting coastal management policies. WRI offers tools for tourism/recreation, fisheries, and MPAs.
 </ol>
 <p></p>
 <i>Do you know of other analysis tools that can help inform MSP?  <a href="mailto:gverutes@stanford.edu?Subject=MSP%20Tools" target="_top">E-mail us</a> the details!</i>
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: How exactly can InVEST be applied to facilitate the MSP process?</b><br>
-<i>A: See our use-case summaries at the bottom of this and other pages.</i>
+<b>Q: What guidance is available to help me choose from all the different decision-support tools for MSP?</b><br>
+<i>A: In 2012 the Center for Ocean Solutions and PacMARA released a <a href="http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233" target="_blank"><b>Decision Guide: Selecting decision support tools for marine spatial planning</b></i></a>
+<p></p>
+<b>Q: What metrics are most effective in tying ecosystem function/structure to people's values?</b><br>
+<i>A: It depends largely on what ecosystem service and function are under consideration.  Stakeholder engagement can elucidate the source(s) of environmental change, how these changes affect ecosystem function, and what ecological outputs will change.  Once these connections become clear, it can then be useful to talk about metrics like economic valuation.  This process of working from change, through function, and then to ecological outcomes to people is typically more important than any final measures of ecosystem services or value.</i>
+<p></p>
+<b>Q: How exactly can InVEST models be applied to facilitate the MSP process?</b><br>
+<i>A: Visit our <a href="marine_invest.html"><b>Marine InVEST page</b></a> to learn about the models -or- read through the NatCap use-case summaries at the bottom of this and subsequent pages to learn how different models in the InVEST toolkit were applied for MSP.</i>
 <p></p>
 <b>Q: If I have questions about using InVEST models or run into problems, where can I get help?</b><br>
-<i>A: First, check the <a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST user’s guide</b></a> chapter for the model you’re using.  Each chapter covers the theory behind the model as well as detailed information about how data should be formatted and how to interpret the results.  Each model's sample data provides an example of how input data should be formatted.  Secondly, the <a href="http://ncp-yamato.stanford.edu/natcapforums/" target="_blank"><b>NatCap User Help Forum</b></a> allows users to post your questions.  The forum is also a great way to interact with other InVEST users and NatCap staff.</i>    
-<p></p>
-<b>Q: What guidance is available to help me choose from the different MSP decision-support tools?</b><br>
-<i>A: In 2012 the Center for Ocean Solutions and PacMARA released a <a href="http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233" target="_blank"><b>Decision Guide: Selecting decision support tools for marine spatial planning</b></i></a>
+<i>A: First, check the <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST user’s guide</b></a> chapter dedicated to your model of interest.  Each chapter covers the theory behind the model as well as detailed information about data formatting requirements and how to interpret the results (model outputs).  Each model's sample input data offers an example of how input data should be formatted.  Secondly, the <a href="http://ncp-yamato.stanford.edu/natcapforums/" target="_blank"><b>NatCap User Help Forum</b></a> enables users to post questions.  The forum is also a great way to interact with other InVEST users and NatCap staff.</i>    
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
 <ul>
-<li>Guerry, Anne D., et al. "Modeling benefits from nature: using ecosystem services to inform coastal and marine spatial planning." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> 8.1-2 (2012): 107-121. <a href="http://www.tandfonline.com/doi/abs/10.1080/21513732.2011.647835#.VIY3jNLF8aU" target="_blank">doi:10.1080/21513732.2011.647835</a></li>
-<li>Kim, Choong-Ki, et al. "Catching the Right Wave: Evaluating Wave Energy Resources and Potential Compatibility with Existing Marine and Coastal Uses." <i>PloS one</i> 7.11 (2012): e47598. <a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0047598#pone-0047598-g008" target="_blank">doi:10.1371/journal.pone.0047598</a></li>
+<li>Guerry, Anne D., et al. "Modeling benefits from nature: using ecosystem services to inform coastal and marine spatial planning." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> 8.1-2 (2012): 107-121. <a href="docs/Guerry_etal_2012_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2011.647835</a></li>
+<li>Kim, Choong-Ki, et al. "Catching the Right Wave: Evaluating Wave Energy Resources and Potential Compatibility with Existing Marine and Coastal Uses." <i>PloS one</i> 7.11 (2012): e47598. <a href="docs/Kim_etal_2012_PLOSONE.pdf" target="_blank">doi:10.1371/journal.pone.0047598</a></li>
 <li>Stelzenmüller, Vanessa, et al. "Practical tools to support marine spatial planning: a review and some prototype tools." <i>Marine Policy</i> 38 (2013): 214-227. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X12001364" target="_blank">doi:10.1016/j.marpol.2012.05.038</a></li>
 <li>White, Crow, Benjamin S. Halpern, and Carrie V. Kappel. "Ecosystem service tradeoff analysis reveals the value of marine spatial planning for multiple ocean uses." <i>Proceedings of the National Academy of Sciences</i> 109.12 (2012): 4696-4701. <a href="http://www.pnas.org/content/109/12/4696.short" target="_blank">doi: 10.1073/pnas.1114215109</a></li>
 <li><a href="http://ncp101.class.stanford.edu/" target="_blank"><b>NCP101</b></a> - A free online course developed by NatCap; modules 2-4 allow learners to apply select marine InVEST models using real data from Belize</li>
@@ -211,10 +214,17 @@ Below we list some freely-available MSP analysis toolkits. Click on the tool's n
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-Use the expand [+] button to learn more about this analyze step in the context of select NatCap use-cases.
+Use the expand [+] button to learn more about this analyze step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
-<h4>Belize</h4><p>xxx</p>
-<h4>Vancouver Island</h4><p>xxx</p>
-<h4>California</h4><p>xxx</p>
+<h4>California</h4>
+Early on, the <a href="marine_invest.html"><b>InVEST coastal vulnerability model</b></a> was used to highlight the role that habitats play in reducing coastal exposure to people and property from storm-induced erosion and flooding.  These areas were further analyzed at the county-level to identify locations most suitable for various activities and conservation.  This information provides local agencies with a process to better determine how their coasts and oceans can be sustainably used and protected.  Based on the different metrics being requested by northern California stakeholders, additional InVEST models are being applied to map the various co-benefits provided by healthy coastal-marine ecosystems, including recreation, scenic quality and watershed services.
+<p></p>
+<h4>Belize</h4>
+A risk assessment was conducted to map impacts to habitats from eight coastal-marine uses/activities.  Based on the amount of "functional" habitat (healthy ecosystems able to provide benefits to people), three <a href="marine_invest.html"><b>InVEST models</b></a> were applied to map, measure and value future ecosystem services, including coastal protection, fisheries, and tourism / recreation services.  This information was used to inform decisions about how human actions affect ecosystems, the provision of ecosystem services, and the value of those services.
+<p></p>
+<ul id="folio_scroller">
+<li><span>Spatial representations of risk to three habitats were used to assess ecosystem service outcomes for the nine coastal planning regions of Belize</span><img alt="" src="img/analyze_bz_folio_1.png" /></a></li>
+</ul> 
+<p></p>
 </body>
 </html>
