--- a/communicate.html
+++ b/communicate.html
@@ -169,11 +169,17 @@ Visit our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: What’s the best way to present results?</b><br>
-<i>A: Results are often best displayed in multiple formats.  Because of the spatial nature of marine planning, maps are almost always an important component of communicating results.  Diagrams can be useful for visualizing trade-offs between services under different scenarios.  Presentations offer an opportunity to foster conversation, while written reports are often used to catalog the relevant literature, data used, model methodology, and results in a single location.</i><br>
+<b>Q: Do decision-makers always want ecosystem service valuation?</b><br>
+<i>A: No.  It's not always about the money.  Other metrics including livelihoods (e.g., jobs) and ecological outcomes (biophysical units) can be just as valuable to decision-makers.</i><br>
+<p></p>
+<b>Q: What kind of information do decision-makers want to hear?</b><br>
+<i>A: Explain what they are losing, how it will affect them, and what they are gaining from some management action/ intervention. This means explaining how environmental or ecological change will affect them on both sides of the equation.</i><br>
+<p></p>
+<b>Q: What is the <u>best</u> way to present results?</b><br>
+<i>A: Results are often best displayed in multiple formats to accomodate different audiences and communication mediums.  Because of the spatial nature of MSP, maps can serve as an important component of communicating results.  Diagrams can be useful for visualizing trade-offs among services under different scenarios.  Presentations offer an opportunity to foster conversation, while written reports are often used to catalog the relevant literature, data sources, model methodology, and results.</i><br>
 <p></p>
 <b>Q: What comes next?</b><br>
-<i>A: After communicating with partners and stakeholders, you may iterate the planning process.  This may mean expanding the project’s objectives, improving data inputs, or modifying scenarios.</i><br>
+<i>A: After communicating with partners and stakeholders, you may iterate the planning process.  This can include expanding the project’s objectives, improving data inputs, or modifying scenarios.  If your project is concluding, applying results through implementation or developing a monitoring program can serve as a lasting contribution to the study area and local community members.</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -186,10 +192,23 @@ Visit our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-Use the expand [+] button to learn more about this communicate step in the context of select NatCap use-cases.
+Use the expand [+] button to learn more about this communicate step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
-<h4>Vancouver Island</h4><p>xxx</p>
-<h4>Belize</h4><p>xxx</p>
-<h4>California</h4><p>xxx</p>
+<h4>Belize</h4>
+Communicating and applying project results in Belize was multi-faceted, including a formal planning document, executive summary, peer-reviewed publications and online maps, videos and brochures.  All synthesis products and communication materials were tailored to specific audiences and decision-makers.
+<p></p><br><br>
+<ul id="folio_scroller">
+<li><span>The Belize Integrated Coastal Zone Management Plan offers a legal framework for implementing a spatial zoning plan to ensure a sustainable future for Belize's coasts and oceans supported by thriving local communities and a vibrant economy.</span><img alt="" src="img/communicate_bz_folio_1.png" /></a></li>
+<li><span>Peer-reviewed publications can serve to disseminate results and build credibility within the scientific community.</span><img alt="" src="img/communicate_bz_folio_4.png" /></a></li>
+<li><span>Online analytical tools provide simple, targeted information to planners, reserve managers, and other decision-makers without the need for a desktop GIS or technical expertise.</span><img alt="" src="img/communicate_bz_folio_3.png" /></a></li>
+<li><span>Online portals allow readers to explore results and recommendations of the Plan in detail.</span><img alt="" src="img/communicate_bz_folio_2.png" /></a></li>
+</ul> 
+<p></p><br><br><br>
+<h4>California</h4>
+<p></p>
+<ul id="folio_scroller">
+<li><span>This one-page interim report is an example of how our partner, Center for Ocean Solutions, communicated results to coastal agencies working in Sonoma County.</span><img alt="" src="img/communicate_ca_folio_1.png" /></a></li>
+</ul> 
+<p></p>
 </body>
 </html>
