--- a/contact.html
+++ b/contact.html
@@ -49,19 +49,22 @@
 </div>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>NatCap and MSP</h2>
-<a href="http://www.naturalcapitalproject.org/" target="_blank"><img src="img/logo_NatCap.jpg" align="left"></a>The <b><a href="http://www.naturalcapitalproject.org/" target="_blank">Natural Capital Project</a></b> (NatCap) aims to <b>integrate the values of nature into all major decisions affecting the environment and human well-being</b>. NatCap has developed practical, science-based approaches and <b><a href="http://www.naturalcapitalproject.org/toolbox.html" target="_blank">tools</a></b> that quantify, map, and value services provided by nature. Accounting for ES reveals the diverse benefits provided by nature, clarifies tradeoffs between alternative development scenarios, and helps make more informed decisions about how to use our coasts and waters.  While NatCap has some experience applying MSP, <u>we do not know, nor do, everything</u>.  Therefore, we have compiled helpful information from others in the MSP community and added our experience to the mix. 
+<img src="img/logo_NatCap.jpg" align="left">The <b><a href="http://www.naturalcapitalproject.org/" target="_blank">Natural Capital Project</a></b> (NatCap) aims to <b>integrate the values of nature into all major decisions affecting the environment and human well-being</b>. NatCap has developed practical, science-based approaches and <b><a href="http://www.naturalcapitalproject.org/toolbox.html" target="_blank">tools</a></b> that quantify, map, and value services provided by nature. Accounting for ES reveals the diverse benefits provided by nature, clarifies tradeoffs between alternative development scenarios, and helps make more informed decisions about how to use our coasts and waters.  While NatCap has some experience applying MSP, <u>we do not know, nor do, everything</u>.  Therefore, we have compiled helpful information from others in the MSP community and added our experience to the mix. 
 <p></p>
 <ul id="folio_scroller">
 <li><span>NatCap MSP Use-Cases</span><iframe width='600px' height='300px' frameBorder='0' src='natcap_msp_usecases.html'></iframe></li>
 </ul> 
-<p></p>
+<p></p><br>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>Acknowledgements</h2>
-<p>Numerous colleagues from the Natural Capital Project contributed to this website.  We would like to thank...<br>
+Numerous colleagues from the Natural Capital Project contributed to this website.  We would like to thank...<br>
 <b>Anne Guerry, Spencer Wood, Katie Arkema, Greg Guannel, Rob Griffin, Amy Rosenthal,<br>
 Jodie Toft, Lauren Rogers, Joey Bernhardt, CK Kim, Joe Faries, Kelly Biedenweg,<br>
-Mike Papenfus, Jeremy Davies, Matt Marsik, Susan Langridge, and Mary Ruckelshaus</b></p>
-<p>Development of this website was made possible through support from the <b>Gordon and Betty Moore Foundation</b>.</p>
+Mike Papenfus, Jeremy Davies, Matt Marsik, Susan Langridge, and Mary Ruckelshaus</b>
+<p></p>
+Development of this website was made possible through support from the <b>Gordon and Betty Moore Foundation</b>.
+<p></p>
 <a class="float right" href="#">top</a>
+<p></p><br>
 </body>
 </html>
