--- a/data.html
+++ b/data.html
@@ -196,7 +196,7 @@ Hover over each marker to learn more about these regional MSP databases.  Click 
 <ul id="folio_scroller">
 <li><span>Regional MSP Databases</span><iframe width='600px' height='300px' frameBorder='0' src='reg_msp_data.html'></iframe></li>
 </ul>
-<p></p>
+<p></p><br>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Helper Tools</h2>
 <img src="img/on_ramp.png"><br>
@@ -210,11 +210,14 @@ Pre-processing spatial and tabular data is a challenging but necessary step befo
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: Where is the best place to find data?</b><br>
-<i>A: We have compiled a list of the global and regional MSP databases we use most often (see above).  Local or regional government agencies often have data available upon request, if they don’t have an existing data portal.  Be clear with partners about data needs; each partner and collaborator is likely to have a network of potential data sources.</i><br>
+<b>Q: Where is the <u>best</u> place to find data?</b><br>
+<i>A: We have compiled a list of some global and regional MSP databases (see above).  Environmental NGOs and local or regional government agencies often have data available upon request, if they don’t have an existing data portal.  Be clear and transparent with partners about data needs and how your team intends to use this information.  Some partners and collaborators are likely to have a network of potential data sources.</i><br>
+<p></p>
+<b>Q: How do I handle lack of data?</b><br>
+<i>A: Lack of data can be a real problem.  However, stakeholders often respond well to qualitative outputs too.  Ultimately, it's important to be clear throughout the process as to where there was uncertainty or low confidence due to paucity of information.</i>
 <p></p>
 <b>Q: How much is <u>enough</u> data?</b><br>
-<i>A: Revisit the project objectives and methodologies outlined during the scoping process.  Start with just enough data to do preliminary analyses (e.g., run a selected tool).  It is often easier to add and refine data as you go rather than waiting for it.</i>
+<i>A: Revisit the project objectives and methodologies outlined during the scoping process.  Start with just enough data to do preliminary analyses (e.g., run a selected tool).  It is often easier to add and refine data as you go rather than waiting for "final" data.</i>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -232,11 +235,16 @@ Pre-processing spatial and tabular data is a challenging but necessary step befo
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-Use the expand [+] button to learn more about this data compilation step in the context of select NatCap use-cases.
+Use the expand [+] button to learn more about this data compilation step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
-<h4>Belize</h4><p>xxx</p>
-<h4>Barbados</h4><p>Data coordination between multiple partners was essential in Barbados.  We used Google Docs to keep an updated list of the data we already had, the data we could readily access if needed, and the data we hoped to acquire.  Having a shared document kept track of data details (e.g., source, spatial coverage, resolution, etc.).  Preliminary runs of certain InVEST models helped identify additional data needs and demonstrate for partners how data would be used.</p>
-<h4>Vancouver Island</h4><p>xxx</p>
-<h4>Mozambique</h4><p>xxx</p>
+<h4>Barbados</h4>
+Data coordination between multiple partners was essential in Barbados.  We used Google Drive to keep an updated list of the data we already had, the data we could readily access if needed, and the data we hoped to acquire.  This online collaboration system helped us track data needs and acquisition (e.g., source, spatial coverage, resolution, etc.) which is difficult to accomplish with a remote team based in Barabados and the USA.  Preliminary results from some InVEST models helped identify additional data needs and demonstrate for partners how data would be used.
+<p></p>
+<h4>Mozambique</h4>
+Coming soon
+<p></p>
+<h4>New England</h4>
+Coming soon
+<p></p>
 </body>
 </html>
