--- a/iterate.html
+++ b/iterate.html
@@ -26,7 +26,15 @@ Iteration can occur within each step, and over the entire process.  For example,
 <p></p>
 The following is a diagram of the approach for ecosystem service assessment proposed by Rosenthal and colleagues (2014).  Here we have adapted it for marine spatial planning. Iteration is critical within each step of the process (orange inset) and between steps (inset again) for the entire process to be effective.  We find that revisiting steps 1-3 after <b><a href="synthesize.html">Synthesize</a></b> (step 5) are the most common pathways for iteration; however, other trajectories do occur.
 <p></p>
-<img src="img/approach_wInset.png">
+<img src="img/approach_wInset.png" usemap="#wInset"><br>
+<map name="wInset">
+  <area shape="circle" coords="70,86,55" href="scope.html" alt="Scope">
+  <area shape="circle" coords="204,86,55" href="data.html" alt="Data">
+  <area shape="circle" coords="337,86,55" href="scenarios.html" alt="Scenarios">
+  <area shape="circle" coords="470,86,55" href="analyze.html" alt="Analyze">
+  <area shape="circle" coords="603,86,55" href="synthesize.html" alt="Synthesize">
+  <area shape="circle" coords="736,86,55" href="communicate.html" alt="Communicate">
+</map>
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
@@ -41,10 +49,13 @@ The following is a diagram of the approach for ecosystem service assessment prop
 </ul>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: How do I know when to move on to the next step?</b><br>
-<i>A: xxx</i><br>
+<b>Q: How do I know when to move on versus returning to a previous step?</b><br>
+<i>A: Knowing how to navigate through the different steps of our approach takes practice.  Returning to previous steps with new information is rarely a waste of time.  It usually serves to solidify your goals for the step and helps your team moving forward.</i><br>
 <p></p>
-<b>Q: How many iterations (times through the 6 steps) are typical for an MSP project?</b><br>
-<i>A: In short, it varies.  There are xxx</i><br>
+<b>Q: How many iterations are typical for an MSP project?</b><br>
+<i>A: The number of iterations (times through the 6 steps) varies by project.  Some NatCap use-cases (e.g., Barbados) were conducted under tight timelines.  Others had years to develop and we learned as we went along.  Explore our use-case summaries at the bottom of each page to learn how many times we visited each step and which factors slowed down or sped up this process.</i>
+<p></p>
+<a class="float right" href="#">top</a>
+<p></p><br>
 </body>
 </html>
