--- a/links.html
+++ b/links.html
@@ -138,7 +138,7 @@ window.onload = function (evt) {
 </head>
 <body>
 <img src="img/headers/links_sm.png" align="left"><h1>&nbsp;&nbsp;Links</h1>
-Use the expand [+] button to explore <b>readings and other online resources for each MSP step</b>.
+Use the expand [+] button to explore readings and other online resources for each MSP step.
 <p></p>
 <h4>Cross-Cutting Steps</h4>
 <ul>
@@ -152,7 +152,7 @@ Use the expand [+] button to explore <b>readings and other online resources for 
 <li><a href="http://www.cmspadvancement.com/" target="_blank"><b>CMSP Advancement Training</b></a> - Free training in the United States for coastal managers and MSP practitioners</li>
 </ul>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h4>Scope</h4>
+<h4>1. Scope</h4>
 <ul>
 <li>Douvere, F. (2008). "The importance of marine spatial planning in advancing ecosystem-based sea use management." <i>Marine Policy</i>, 32(5), 762-771. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X0800064X" target="_blank">doi:10.1016/j.marpol.2008.03.021</a></li>
 <li>Foley, Melissa M., et al. "Guiding ecological principles for marine spatial planning." <i>Marine Policy</i> 34.5 (2010): 955-966. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X10000436" target="_blank">doi:10.1016/j.marpol.2010.02.001</a></li>
@@ -161,7 +161,7 @@ Use the expand [+] button to explore <b>readings and other online resources for 
 <li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank"><b>MESH Scoping Tool</b></a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
 </ul>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h4>Data</h4>
+<h4>2. Data</h4>
 <ul>
 <li>Cornu, Elodie, et al. "Current Practice and Future Prospects for Social Data in Coastal and Ocean Planning." <i>Conservation Biology</i> (2014). <a href="http://onlinelibrary.wiley.com/doi/10.1111/cobi.12310/full" target="_blank">doi:10.1111/cobi.12310</a></li>
 <li>Kittinger, John N., et al. "A practical approach for putting people in ecosystem-based ocean planning." <i>Frontiers in Ecology and the Environment</i> 12.8 (2014): 448-456. <a href="http://dx.doi.org/10.1890/130267" target="_blank">http://dx.doi.org/10.1890/130267</a></li>
@@ -174,7 +174,7 @@ Use the expand [+] button to explore <b>readings and other online resources for 
 </li>
 </ul>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h4>Scenarios</h4>
+<h4>3. Scenarios</h4>
 <ul>
 <li>Arkema, Katie K., et al. "Assessing habitat risk from human activities to inform coastal and marine spatial planning: a demonstration in Belize." <i>Environmental Research Letters</i> 9.11 (2014): 114016. <a href="docs/Arkema_etal_2014_EL.pdf" target="_blank">doi:10.1088/1748-9326/9/11/114016</a></li>
 <li><a href="tradeoff.html"><b>Tradeoff! game</b></a> - A series of mapping games that challenge players to consider the consequences of development actions on ecosystems and the benefits they provide to people</li>
@@ -182,25 +182,25 @@ Use the expand [+] button to explore <b>readings and other online resources for 
 <li><a href="http://www.naturalcapitalproject.org/pubs/ScenariosGuide.pdf" target="_blank"><b>Scenario Guidance and Case Studies</b></a> - A detailed resource for practitioners who want to assess ecosystem services under alternative scenarios. Drawing on case experiences, it provides guidance on scenario types and methods, engaging stakeholders, and creating scenario maps.</li>
 </ul>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h4>Analyze</h4>
+<h4>4. Analyze</h4>
 <ul>
 <li>Coleman, H., et al. "Decision guide: selecting decision support tools for marine spatial planning." The Center for Ocean Solutions, The Woods Institute for the Environment, Stanford University, California (2011). <a href="http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233" target="_blank">http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233</a></li>
-<li>Guerry, Anne D., et al. "Modeling benefits from nature: using ecosystem services to inform coastal and marine spatial planning." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> 8.1-2 (2012): 107-121. <a href="http://www.tandfonline.com/doi/abs/10.1080/21513732.2011.647835#.VIY3jNLF8aU" target="_blank">doi:10.1080/21513732.2011.647835</a></li>
-<li>Kim, Choong-Ki, et al. "Catching the Right Wave: Evaluating Wave Energy Resources and Potential Compatibility with Existing Marine and Coastal Uses." <i>PloS one</i> 7.11 (2012): e47598. <a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0047598#pone-0047598-g008" target="_blank">doi:10.1371/journal.pone.0047598</a></li>
+<li>Guerry, Anne D., et al. "Modeling benefits from nature: using ecosystem services to inform coastal and marine spatial planning." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> 8.1-2 (2012): 107-121. <a href="docs/Guerry_etal_2012_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2011.647835</a></li>
+<li>Kim, Choong-Ki, et al. "Catching the Right Wave: Evaluating Wave Energy Resources and Potential Compatibility with Existing Marine and Coastal Uses." <i>PloS one</i> 7.11 (2012): e47598. <a href="docs/Kim_etal_2012_PLOSONE.pdf" target="_blank">doi:10.1371/journal.pone.0047598</a></li>
 <li>Stelzenmüller, Vanessa, et al. "Practical tools to support marine spatial planning: a review and some prototype tools." <i>Marine Policy</i> 38 (2013): 214-227. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X12001364" target="_blank">doi:10.1016/j.marpol.2012.05.038</a></li>
 <li>White, Crow, Benjamin S. Halpern, and Carrie V. Kappel. "Ecosystem service tradeoff analysis reveals the value of marine spatial planning for multiple ocean uses." <i>Proceedings of the National Academy of Sciences</i> 109.12 (2012): 4696-4701. <a href="http://www.pnas.org/content/109/12/4696.short" target="_blank">doi: 10.1073/pnas.1114215109</a></li>
 <li><a href="http://ncp101.class.stanford.edu/" target="_blank"><b>NCP101</b></a> - A free online course developed by NatCap; modules 2-4 allow learners to apply select marine InVEST models using real data from Belize</li>
 <li><a href="http://www.marineplanning.org/Case_Studies/Case_Studies.html" target="_blank"><b>Marine Planning.org</b></a> - Case studies illustrating the use of MSP and ecosystem-based management (EBM) to address multiple objectives 
 </ul>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h4>Synthesize</h4>
+<h4>5. Synthesize</h4>
 <ul>
 <li><a href="http://www.esri.com/news/arcuser/0112/files/design-principles.pdf" target="_blank"><b>Design principles</b></a> for mapmaking from ESRI (creators of ArcGIS software)</li>
 <li><a href="http://www.colorbrewer2.org" target="_blank"><b>Colorbrewer2.org</b></a> - An excellent resource for including vibrant and color-safe tones in your visuals</li>
 <li><a href="http://www.flowingdata.com" target="_blank"><b>Flowingdata.com</b></a> and <a href="http://www.visualizing.org" target="_blank"><b>Visualizing.org</b></a> - Data visualization ideas in blog format</li>
 </ul>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h4>Communicate</h4>
+<h4>6. Communicate</h4>
 <ul>
 <li>Ehler, Charles. "Conclusions: benefits, lessons learned, and future challenges of marine spatial planning." <i>Marine Policy</i> 32.5 (2008): 840-843. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X08000730" target="_blank">doi:10.1016/j.marpol.2008.03.014</a></li>
 <li>Merrie, Andrew, and Per Olsson. "An innovation and agency perspective on the emergence and spread of Marine Spatial Planning." <i>Marine Policy</i> 44 (2014): 366-374. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X13002315" target="_blank">doi:10.1016/j.marpol.2013.10.006</a></li>
@@ -208,5 +208,6 @@ Use the expand [+] button to explore <b>readings and other online resources for 
 <li><a href="http://cartodb.com/" target="_blank"><b>CartoDB.com</b></a> and <a href="http://mapbox.com/" target="_blank"><b>Mapbox.com</b></a> - Free online tools for building professional web maps</li>
 </ul>
 <a class="float right" href="#">top</a>
+<p></p><br>
 </body>
 </html>
