--- a/scope.html
+++ b/scope.html
@@ -150,7 +150,7 @@ Scoping (or framing) to link to the decisions and decision-makers of interest is
   <area shape="circle" coords="765,85,55" href="communicate.html" alt="Communicate">
 </map>
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
+<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2><p></p>
 <ul>
 <li>Established partnerships with clear roles and responsibilities for each individual or organization</li>
 <li>Clear understanding of the scientific or policy questions to be answered</li>
@@ -171,7 +171,7 @@ This step serves to link the decisions, decision-makers, and scientific support 
 <li>Identifying essential expertise (e.g., planner, project manager, GIS tech) and which phases these skills are required</li>
 <p></p>
 <a name="questions"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/scopeQ_sm.png" align="left"><h2>&nbsp;&nbsp;Sample MSP Scoping Questions</h2>
+<img src="img/headers/scopeQ_sm.png" align="left"><h2>&nbsp;&nbsp;Sample MSP Scoping Questions</h2><p></p>
 <ul>
 <li>Is there a specific problem(s) people are rallying around?</i>
 <li>Which coastal and ocean sectors are <b>most relevant</b> to the planning process?</li>
@@ -181,10 +181,10 @@ This step serves to link the decisions, decision-makers, and scientific support 
 </ul>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: Why is it important to spend time scoping?</b><br>
-<i>A: Early scoping saves time down the road.  By clearly outlining project objectives, scoping focuses efforts on the most important questions and ensures that the planning process will yield the best and highest impact results possible.</i><br>
+<b>Q: Why is scoping important?  Is it okay to start scoping later in the process as opposed to from the beginning?</b><br>
+<i>A: Early scoping saves time down the road.  By clearly outlining project objectives, scoping focuses efforts on the most important questions and ensures that the planning process will yield the best and highest impact results possible.  Working with stakeholders and decision-makers from the beginning can save time (both yours and theirs).  As scientists we have found that issues we thought mattered, don't always matter to local people. For example, only sometimes do they want valuation.  Also, sometimes the ecosystem and economic measures we used in one location were irrelevant to decision-making in another.</i><br>
 <p></p>
-<b>Q: How much scoping is enough?</b><br>
+<b>Q: How much scoping is <u>enough</u>?</b><br>
 <i>A: Scoping should match the scale of the project.  Scoping can start with a two-page description of work, but may end up as a months-long process (see our Barbados example).  Remember that scoping happens in stages and is an iterative process.  Data limitations, scenario development, or the synthesis from a first round of results, may require additional literature review, new partners, or the need for refined questions.</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -203,12 +203,13 @@ This step serves to link the decisions, decision-makers, and scientific support 
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-Use the expand [+] button to learn more about this scoping step in the context of select NatCap use-cases.
+Use the expand [+] button to learn more about this scoping step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
-<h4>Barbados</h4><p> To aid in a coastal management plan for Barbados, NatCap worked with key organizational partners to create a formal literature review and gap analysis for review by the Inter-American Development Bank (IDB).  The report outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about the most important ecosystem services and the steps needed to complete a marine spatial plan.</p>
-<h4>Vancouver Island</h4><p>xxx</p>
-<h4>Belize</h4><p>xxx</p>
-<h4>Mozambique</h4><p>xxx</p>
-<h4>California</h4><p>xxx</p>
+<h4>Barbados</h4>
+To aid in a coastal management plan for Barbados, NatCap worked with key organizational partners to create a formal literature review and gap analysis for review by the Inter-American Development Bank (IDB).  The report outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about the most important ecosystem services and the steps needed to complete a marine spatial plan.
+<p></p>
+<h4>California</h4>
+Coming soon
+<p></p>
 </body>
 </html>
