--- a/synthesize.html
+++ b/synthesize.html
@@ -152,7 +152,7 @@ Results from tools used in the previous step are often not in a usable format. S
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Synthesize outputs from <b><a href="analyze.html">Analyze</a></b> step to compare ecosystem service delivery under each scenario</li>
+<li>Synthesize outputs from the <b><a href="analyze.html">Analyze</a></b> step to compare ecosystem service delivery under each scenario</li>
 <li>Summarize project information to be included in the communicate and apply phase (<b><a href="communicate.html">Communicate</a></b> step)</li> 
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -182,11 +182,14 @@ Synthesizing spatial outputs from decision-support tools can be challenging.  Na
 </ol>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: How are trade-offs among ecosystem services best synthesized?</b><br>
-<i>A: Trade-offs should be synthesized with the project objectives and audience in mind.  When multiple services can be represented using a common unit (e.g., $, number of jobs, etc.), these values can be summarized across a scenario.  In cases where services have different units (e.g., hectares of habitat, pounds of fish, number of visitors, etc.) something as simple as proportional arrows can be used to represent how services increase or decrease under alternative future scenarios.  See our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</b></a> for ideas.</i><br>
+<b>Q: Is it possible to weigh options and compare tradeoffs if results are <u>not</u> in the same units?</b><br>
+<i>A: Yes, it is possible.  We make tradeoffs all the time where we know the cost of something and a physical measure of what we get for that cost.  Try to synthesize results clearly in order to convey to your audience what is being gained or lost.  Quantify it ecologically and economically (if possible) and spell out what can be gained through some management action.  After presenting this information (<a href="communicate.html"><b>Communicate</b></a> step) let the stakeholders and decision-makers decide.  Monetizing outputs for the sake of producing results in a common currency often results in less informed decisions.</i><br>
 <p></p>
-<b>Q: xxx?</b><br>
-<i>A: xxx</i><br>
+<b>Q: How are tradeoffs among ecosystem services synthesized?</b><br>
+<i>A: Tradeoffs should be synthesized with the project objectives and audience in mind.  When multiple services can be represented using a common unit (e.g., $, number of jobs, etc.), these values may be summarized across a scenario.  In cases where results have different units (e.g., hectares of habitat, pounds of fish, number of visitors, etc.) something as simple as proportional arrows can be used to represent how services increase or decrease under alternative scenarios.  See our <a href="gallery/gallery.html"><b>Gallery</b></a> for synthesis ideas.</i><br>
+<p></p>
+<b>Q: What is the <u>best</u> synthesis tool for MSP?</b><br>
+<i>A: The best way to synthesize results is to use a method or process in which you are most comfortable.  Members of NatCap have found it helpful to synthesize InVEST results using a combination of GIS (e.g., ArcGIS, QGIS, etc.) and graphic design software like Adobe Illustrator/ Photoshop, GIMP, or InkScape.  However, industry favorites like Microsoft Excel and open-source packages like OpenOffice, R, or Python can also serve as effective synthesis tools.  Bottom line: there are no rules or restrictions here - be creative!</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -198,10 +201,27 @@ Synthesizing spatial outputs from decision-support tools can be challenging.  Na
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-Use the expand [+] button to learn more about this synthesize step in the context of select NatCap use-cases.
+Use the expand [+] button to learn more about this synthesize step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
-<h4>Vancouver Island</h4><p>xxx</p>
-<h4>Belize</h4><p>xxx</p>
-<h4>California</h4><p>xxx</p>
+<h4>Vancouver Island</h4>
+NatCap is working with the West Coast Aquatic Management Board (WCA), a public-private partnership among government agencies and diverse local stakeholders, in its creation of spatial plans for Barkley and Clayoquot Sounds on the West Coast of Vancouver Island (WCVI).  We iteratively mapped and analyzed ecosystem services across realistic zoning scenarios, which is helping decision makers accommodate varied priorities for using marine resources.  Local zoning maps provided realistic scenarios for coastal populations. For larger-scale planning questions, West Coast Aquatic used outputs from InVEST and other tools to compare a wide range of value metrics across different management scenarios.
+<p></p><br><br>
+<ul id="folio_scroller">
+<li><span>Visualizing results as simple proportions or directional relationships can be an effective way to synthesize multiple metrics and goals for a marine spatial plan.</span><img alt="" src="img/synthesize_vi_folio_4.png" /></a></li>
+<li><span>Flower diagrams can synthesize a wealth of information, including scenario comparisons<br>(C, S1, S2) and project goals (1-6), but may be too complex for some audiences.</span><img alt="" src="img/synthesize_vi_folio_1.png" /></a></li>
+<li><span>This map shows where proposed clear-cuts impact kayaking routes.  Preservation of pristine recreational views is one of many metrics that our partner, West Coast Aquatic, used to achieve a planning goal of "vibrant communities, recreation and culture".</span><img alt="" src="img/synthesize_vi_folio_3.png" /></a></li>
+<li><span>Spider diagrams allow for the visualization of ecosystem service tradeoffs across scenarios (baseline, industry expansion, conservation).  These plots, however, can be difficult to explain to a non-scientific audience.</span><img alt="" src="img/synthesize_vi_folio_2.png" /></a></li>
+</ul> 
+<p></p><br><br><br>
+<h4>Belize</h4>
+To inform the design of the Integrated Coastal Zone Management Plan for Belize we modeled three ecosystem services and produced biophysical and economic outputs for each service: 1) catch and revenue from spiny lobster, 2) land protected and avoided damages from storms, and 3) visitation and expenditures from tourism.  We modeled the three services for the <i>Current</i>, <i>Conservation</i>, <i>Informed Management</i> and <i>Development</i> scenarios.  We produced national results, for the entire region within the boundaries of the planning process (3 km inland and the territorial sea, (~18,000 km2)) and for each of the nine planning regions. 
+<p></p><br><br>
+<ul id="folio_scroller">
+<li><span>We used the <a href="marine_invest.html">InVEST habitat risk assessment model</a> to understand differences in the cumulative risk to coral reefs, mangroves, and seagrass beds under three alternative futures.</span><img alt="" src="img/synthesize_bz_folio_1.png" /></a></li>
+<li><span>Through its contribution to outdoor recreation, the environment provides services to people.  We used the <a href="marine_invest.html">InVEST recreation & tourism model</a> to map the spread of recreation by tourists.</span><img alt="" src="img/synthesize_bz_folio_2.png" /></a></li>
+<li><span>A spiny lobster model for Belize was used to explore how ES returns from the fishery would respond to changes in lobster habitat (seagrass, mangrove, coral reef) or fishing pressure.</span><img alt="" src="img/synthesize_bz_folio_3.png" /></a></li>
+<li><span>We used the <a href="marine_invest.html">InVEST coastal protection model</a> to quantify the protective benefits that natural habitats provide against erosion and inundation in nearshore environments.</span><img alt="" src="img/synthesize_bz_folio_4.png" /></a></li>
+</ul> 
+<p></p><br>
 </body>
 </html>
