--- a/tradeoff.html
+++ b/tradeoff.html
@@ -18,21 +18,25 @@
 			});
 		});
 	</script>
+	
 </head>
 <body>
 <h1>Tradeoff!</h1>
-Tradeoff! is a game developed by the Natural Capital Project that allows participants...
-<p></p>
-<div class="hr dotted clearfix">&nbsp;</div>
-<h2>About the Game</h2>
-xxx
+<img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
+Tradeoff! is a series of mapping games developed by NatCap that simply introduces concepts related to nature's benefits to people while mirroring our analytical approach with InVEST.  The process of preparing spatial data, running software tools, and appropriately interpreting results can be challenging.  Tradeoff! represents a more effective means to convey our approach to a broader audience, especially those who are not computer saavy or experience scientific modelers.  Currently, we offer two versions of Tradeoff!: 1) coastal zone management (called "Best Coast Belize!") and 2) terrestrial/freshwater (Agriculture Edition).<br>
 <p></p>
 <ul id="folio_scroller">
 <li><iframe src="http://www.youtube.com/embed/OZQ8OOs7QHQ?autoplay=1" width="600" height="300" frameborder="0" allowfullscreen></iframe></li>
 </ul>
 <p></p><br>
-<div class="hr dotted clearfix">&nbsp;</div>
-<h2>xxx</h2>
-xxx
+<a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
+<ul>
+<li>Verutes, Gregory M., and Amy Rosenthal. "Using simulation games to teach ecosystem service synergies and trade-offs." Environmental Practice 16.03 (2014): 194-204. doi: <a href="docs/Verutes_Rosenthal_2014_EP.pdf" target="_blank">http://dx.doi.org/10.1017/S1466046614000222</a></li>
+<li> <a href="https://www.worldwildlife.org/blogs/science-driven/posts/games-a-win-for-conservation" target="_blank"><b>WWF Science Driven</b></a> - A blog post about Tradeoff! and developing games for conservation
+<li><i>Would you like to play Tradeoff! with your organization?  <a href="mailto:gverutes@stanford.edu?Subject=Tradeoff!" target="_top">E-mail us</a> for details!</i></li>
+<p></p>
+<a class="float right" href="#">top</a>
+<p></p><br>
 </body>
 </html>
