--- a/welcome.html
+++ b/welcome.html
@@ -70,7 +70,7 @@ We encourage you to visit the six steps of our suggested approach by clicking th
 <tr><td><img src="img/headers/overview.png" style="vertical-align:top"></td><td><b>Overview</b></td><td>Description of each step </td></tr>
 <tr><td><img src="img/headers/products.png" style="vertical-align:top"></td><td><b>Goals</b></td><td>Intermediate and final products and outcomes from each step</td></tr>
 <tr><td><img src="img/headers/tips.png" style="vertical-align:top"></td><td><b>Tips</b></td><td>Helpful advice and lessons learned</td></tr>
-<tr><td><img src="img/headers/databases.png" style="vertical-align:top"></td><td><b>Databases</b></td><td>Relevant sources to spatial data and project information</td></tr>
+<tr><td><img src="img/headers/databases.png" style="vertical-align:top"></td><td><b>Databases</b></td><td>Relevant sources of spatial data and project information</td></tr>
 <tr><td><img src="img/headers/tools.png" style="vertical-align:top"></td><td><b>Tools</b></td><td>Decision-support and helper tools</td></tr>
 <tr><td><img src="img/headers/faq.png" style="vertical-align:top"></td><td><b>FAQ</b></td><td>Answers to frequently asked questions</td></tr>
 <tr><td><img src="img/headers/links.png" style="vertical-align:top"></td><td><b>Links</b></td><td>Suggested reading and online links</td></tr>
@@ -83,6 +83,6 @@ We encourage you to visit the six steps of our suggested approach by clicking th
 Learning about new MSP use-cases can elucidate methods and tools that may be relevant to your own project. The <b>Natural Capital Project (NatCap)</b> has compiled lessons from six MSP use-cases around the world.  At the bottom of each subpage we summarize how each step was accomplished for select use-cases.
 <p></p>
 <a class="float right" href="#">top</a>
-<p></p>
+<p></p><br>
 </body>
 </html>
