--- a/frame.html
+++ b/frame.html
@@ -5,7 +5,7 @@
 <script src="js/menu-vertical.js" type="text/javascript"></script>
 </head>
 <body>
-<a href="welcome.html" title="Concierge Home" target="content" ><img src="img/logo_Concierge.png"></a>
+<img src="img/logo_Concierge.png">
 <br><br>
 <ul id="menu-v">
 	<li><a href="welcome.html" target="content">Home</a>
@@ -28,7 +28,7 @@
 <br> 	
 <ul id="menu-v">
 	<li></li>
-	<li><a href="gallery.html" target="content">Gallery</a></li>
+	<li><a href="gallery/gallery.html" target="content">Gallery</a></li>
 	<li><a href="links.html" target="content">Links</a></li>
 	<li><a href="contact.html" target="content">Contact</a></li>
 </ul>
