--- a/reg_msp_data.html
+++ b/reg_msp_data.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Regional MSP Databases</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
@@ -18,6 +17,8 @@ L.mapbox.accessToken = 'pk.eyJ1IjoiZ2VvaW50ZXJlc3QiLCJhIjoiQ2czbnlDMCJ9.pQ-_LxzH
 var map = L.mapbox.map('map', 'mapbox.world-light')
   .setView([35, -120], 1);
 
+map.scrollWheelZoom.disable();
+  
 var myLayer = L.mapbox.featureLayer().addTo(map);
 
 // The GeoJSON representing the two point features
